💄 fix text overflow

--- a/src/assets/styles/pages/qui-suis-je.scss
+++ b/src/assets/styles/pages/qui-suis-je.scss
@@ -28,9 +28,21 @@ main{
         display: flex;
         height: 830px;
         margin-bottom: 100px;
+
+
         h1{
             transform: translateY(-100%);
         }
+
+
+
+        @include mq('tablet', max){
+            height: fit-content;    
+            margin-bottom: 0px;
+            h1{transform: translateY(0%); text-align: center;}
+
+        }
+
         .branch1{
             position: absolute;
             top: 50px;
@@ -49,7 +61,9 @@ main{
     section.ado{
         position: relative;
         height: 100vh;
-        
+        @include mq('tablet', max){
+            height: fit-content;
+        }
         p{
             top: 300px;
             position: absolute;
@@ -72,6 +86,9 @@ main{
     section.diplome{
         position: relative;
         height: 100vh;
+        @include mq('tablet', max){
+            height: fit-content;
+        }
         margin-top: 200px;
         display: flex;
         align-items: center;
@@ -86,6 +103,9 @@ main{
     section.emotions{
         position: relative;
         height: 100vh;
+        @include mq('tablet', max){
+            height: fit-content;
+        }
         display: flex;
         align-items: center;
         justify-content: center;
@@ -104,6 +124,10 @@ main{
         position: relative;
         height: 100vh;
         margin-bottom: 300px;
+        @include mq('tablet', max){
+            height: fit-content;
+            margin-bottom: 0px;
+        }
         display: flex;
         align-items: center;
         justify-content: center;
@@ -121,6 +145,9 @@ main{
         position: relative;
         width: 100%;
         height: 150vh;
+        @include mq('tablet', max){
+            height: fit-content;
+        }
         display: flex;
         align-items: center;
         justify-content: center;
@@ -164,7 +191,12 @@ main{
         }
         section{
             padding: 56px;
-            height: 50vh!important;
+            
+            // height: 50vh!important;
+            // @include mq('tablet', max){
+            //     min-height: 50vh!important;
+            //     max-height: fit-content!important;
+            // }   
             p{
                 transform: translate(0)!important;
                 position: static!important;
@@ -186,5 +218,6 @@ main{
 p{
     @include mq("tablet", max){
         position: static!important;
+        text-align: justify;
     }
 }
